Fix of blocking interface by alert on mobile screen

--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,7 @@ nav {
 #toast-container{
   top: 3rem !important;
   animation: fade-in 250ms ease-in-out;
+  max-height: fit-content !important;
 }
 
 @keyframes fade-in {
